--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A fetch polyfill for sketch",
   "main": "lib/index.js",
   "dependencies": {
-    "mocha-js-delegate": "^0.1.1"
+    "cocoascript-class": "^0.1.1"
   },
   "devDependencies": {
     "standard": "^8.6.0"
