--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "sketch-polyfill-fetch",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "description": "A fetch polyfill for sketch",
   "main": "lib/index.js",
-  "dependencies": {
-    "cocoascript-class": "^0.1.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@skpm/fs": "^0.2.2",
-    "@skpm/test-runner": "^0.3.5"
+    "@skpm/test-runner": "^0.4.0"
   },
   "scripts": {
     "test": "skpm-test"
